# spadecgh

./: .gitattributes  .gitignore  404.html  Born.ipynb  CGH demo.ipynb  LICENSE  README.md  SLMnCGHnThinLens.ipynb  __init__.py  _core.py  examples.ipynb  forge.config.cjs  fx1.npy  index.html  justfile  makefile  mathjax-config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  search.html  setup.py  sitemap.xml  test.ipynb
.github/workflows/: build-publish.yml  build.yml  cnhu-compile-cpp.yml  deploy.yml  docs.yml  main.yml  offline-app.yml  pytest.yml  web-app.yml
CGH/: __init__.py  _core.py.old  core.py
cli version/hduq/: setup.py
cli version/hduq/hduq/: cgh.py  cli.py
cli version/hduq/hduq.egg-info/: PKG-INFO
cpp/: CMakeLists.txt  HermiteGaussian.hpp  LaguerreGaussian.hpp  cgh_engine.cpp  common.hpp  core.hpp  fx.hpp  fx2.hpp  justfile  main.cpp  main_py.cpp  main_wasm.cpp  makefile.bak
cpp/assets/: farrizon_uint16.hpp  fdavis_uint16.hpp  fhybrid_uint16.hpp  fx0_data.hpp  fx1_data.hpp  fx2_data.hpp
cpp/cnhu/cgh_engine/: CMakeLists.txt  fx2.hpp  justfile
docs/: index.md  usage.md
hduq/: cgh.py  spadeutils.py
hduq/tools/: io.py
public/: CNAME
public/wasm/: cgh_wasm.js  cgh_wasm.wasm
python/: README.md  mkdocs.yml  pyproject.toml
python/.github/workflows/: main.yml
python/src/hducgh/: _hook.py  core.py  spadeutils.py
python/src/hducgh/assets/: farrizon_uint16.npy  fdavis_uint16.npy  fhybrid_uint16.npy  fx1_data.npy
python/src/hduq/cnhu/assets/: fx2.npy
python/src/hduq/cnhu/cgh/: core.py
python/src/spadecgh/: _hook.py  core.py
search/: search_index.json
src/: App.jsx
src/components/: Canvas.jsx  Navbar.jsx  Sidebar.jsx
src/hduq/cnhu/: cgh.py
src/hduq/cnhu/cgh/: CMakeLists.txt  _hook.py  core.py  serialize.py
src/hduq/cnhu/cgh/cpp/: cgh_engine.cpp
src/hooks/: useWasm.js
src/wasm/: engine.cpp  fx2.h  py.ipynb
test/: test_backends.py
usage/: index.html
web-app/: index.html
web-app/assets/: index-BUGVv6dC.css  index-Dri5sG8f.css  index-k12ZUYT-.js  index-vUawgLd1.js
web-app/wasm/: hducgh_backend_web.js  hducgh_backend_web.wasm  spadecgh_backend_web.js  spadecgh_backend_web.wasm
web_app/: afterPack.js  electron-builder.json  forge.config.cjs  index.html  main.js  package-lock.json  package.json  preload.js  vite.config.js
web_app/icons/: icon.icns
web_app/src/: App.jsx
web_app/src/components/: GlobalSettings.jsx  MainCanvasArea.jsx  Modals.jsx  ModeList.jsx  Navbar.jsx  RestoreToast.jsx  Sidebar.jsx
web_app/src/utils/: configBuilder.js  constants.js  exportBmp.js  formatConfig.js  formatInput.js  useCGHCore.js
web_app/src/wasm/: fx2.hpp
