[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "hducgh"
description = "HDU CGH utils"
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "HDU quantum metrology lab" }]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["numpy", "scipy", "pillow", "cffi"]


[tool.setuptools.package-data]
hducgh = ["**/*.so", "**/*.dll", "**/*.dylib"]


[tool.setuptools.packages.find]
where = ["src"]
include = ["hducgh*"]


[tool.setuptools_scm]
root = ".."
local_scheme = "no-local-version"
