[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "hducgh"
description = "HDU CGH toolkit [Quantum@HDU]"
version = "v0.1.0a1"

readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Quantum Metrology Laboratory, Hangzhou Dianzi University" }]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["numpy", "scipy", "pillow", "cffi"]


[tool.setuptools.package-data]
hducgh = ["**/*.so", "**/*.dll", "**/*.dylib"]


[tool.setuptools.packages.find]
where = ["src"]
include = ["hducgh*"]

